@@ -63,6 +63,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13293: Better error message when trying to marshal bytes using
+  xmlrpc.client.
+
 - Issue #13291: NameError in xmlrpc package.
 
 - Issue #13258: Use callable() built-in in the standard library.
